schema/testdata/validation_request_headers_invalid_dot_notation/schema.keel
model Something {
    fields {
        foo Text
    }

    operations {
        create createSomething() with (foo) {
            @permission(expression: something.createdAt == ctx.headers.KEY.KEY2)
        }
    }
}
